# slackbot-aws

./: .editorconfig  .gitignore  README.md  docker-compose.yml  pylintrc  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
docker/Python3/: Dockerfile
docker/python3/: requirements.txt
slackbot_aws/: aws.py  credentials.json.template  fetch.py  getip.py  logger.py  run.py  slack.py  slackbot.py  status.py  stop.py
